# seeing

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  install_tools.ps1  run.sh  setup.ps1  setup.sh
platform/linux/: com.seeing.nle.desktop
platform/macos/: Info.plist.in
resources/: resources.qrc
src/: main.cpp
src/ai/: ai_engine_factory.cpp  ai_engine_factory.h  ai_engine_interface.h  dummy_ai_engine.cpp  dummy_ai_engine.h  http_ai_engine.cpp  http_ai_engine.h  marlin_server.py
src/controller/: editor_controller.cpp  editor_controller.h
src/model/: project_model.cpp  project_model.h
src/view/: chat_panel.cpp  chat_panel.h  main_window.cpp  main_window.h  media_panel.cpp  media_panel.h  preview_panel.cpp  preview_panel.h  settings_dialog.cpp  settings_dialog.h  timeline_clip_item.cpp  timeline_clip_item.h  timeline_panel.cpp  timeline_panel.h
